--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
                 pip install -U -r requirements.txt
 
                 # Extra packages needed for testing
-                pip install -U nose coverage pytest nbval ipykernel
+                pip install -U nose coverage "pytest<8" nbval ipykernel
 
             - name: Install Pixmappy (not on pip)
               run: |
